--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
             <version>3.0.1</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>io.castle</groupId>
+            <artifactId>castle-java</artifactId>
+            <version>0.5.2-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
